force-app/main/default/objects/Customer_Verification__c/Customer_Verification__c.object-meta.xml
<CustomObject>
    <label>Customer Verification</label>
    <nameField>
        <displayFormat>CV - {0000}</displayFormat>
        <label>Customer Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>