force-app/main/default/objects/Customer_Verification__c/fields/Customer_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verification_Status__c</fullName>
    <label>Customer Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>