force-app/main/default/objects/Customer_Verification__c/fields/Customer_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>