force-app/main/default/objects/Customer_Verification__c/fields/Customer_Verified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verified_Date_Time__c</fullName>
    <label>Customer Verified Date/Time</label>
    <type>DateTime</type>
</CustomField>