force-app/main/default/objects/Customer_Verification__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Customer Verifications</relationshipLabel>
    <relationshipName>Customer_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>